# lox

./: CMakeLists.txt  README.md  main.cpp
include/: lox.h
src/: AstPrinter.hpp  BaseExpression.cpp  BaseExpression.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  logger.cpp  logger.h  lox.cpp  parser.cpp  parser.h  token.cpp  token.h
tests/: test_interpreter.cpp  test_lexer.cpp  test_parser.cpp
tests/data/: normal_lox.txt
